--- a/Assets/Resources/Languages/en_US.json
+++ b/Assets/Resources/Languages/en_US.json
@@ -13,7 +13,8 @@
 "Watch the video and get the fragments on the balance",
 "Look",
 "You received",
-"Accept"
+"Accept",
+"Confirm purchase"
 ],
 "loc_main": [
 "Score",
