--- a/Assets/Resources/Languages/ru_RU.json
+++ b/Assets/Resources/Languages/ru_RU.json
@@ -13,7 +13,8 @@
 "Посмотрите видео и получите фрагменты на баланс",
 "Посмотреть",
 "Вы получили",
-"Принять"
+"Принять",
+"Подтвердите покупку"
 ],
 "loc_main": [
 "Счёт",
